Fix hero logo cutoff

--- a/components/hero/hero.sass
+++ b/components/hero/hero.sass
@@ -16,7 +16,7 @@
   background-size: cover
   background-repeat: no-repeat
   background-position: center
-  height: 30%
+  height: 35%
   width: 50%
   z-index: -1
 
